@@ -1,5 +1,11 @@
 2012-07-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/SDCClospre.hpp,
+	  src/SDCClospre.cc:
+	  Preparations for safety.
+
+2012-07-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCClospre.hpp:
 	  Fix for out-of-memory handling in lospre.
 
